--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,11 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/avatar-icon.png"
+avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/avatar-icon.png"
+# title-img: "/img/avatar-icon.png"
 
 # --- Background colour/image options --- #
 
@@ -74,12 +74,12 @@ author:
 social-network-links:
   rss: true
   email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+#  facebook: daattali
+  github: samuelrhurst
+#  twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
-#  linkedin: daattali
+  linkedin: sam-hurst-221b7b22
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
